update bao cao thuyet trinh & fix project code